\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 2.1.9}{
  \itemize{
     \item{Feature: add fromComp to dba.plotPCA}
   }
}

\section{Version 2.1.8}{
  \itemize{
     \item{Restore bFlip and filtering features}
   }
}


\section{Version 2.1.4}{
  \itemize{
     \item{Sync bug fixes from release version}
   }
}

\section{Version 2.1.3}{
  \itemize{
     \item{Feature: can filter each contrast at analysis time (filter and filterFun paramters added to dba.analyze)}
     \item{Feature: can "flip" order of groups in dba.report (bFlip parameter)}
     \item{Feature: can "flip" order of groups in dba.plotMA (bFlip parameter)}
   }
}

\section{Version 2.1.1}{
  \itemize{
     \item{Bugfix: add empty peakset (peaks=NA)}
     \item{Bugfix: fix warnings regarding no visible definitions}
     \item{Vignette: add link to vignette data}
   }
}

\section{Version 2.0.0}{
  DiffBind has had substantial internal changes since the last release. 
  These are focused on improving memory efficiency for large experiments. 
  \itemize{
     \item{Feature changes} 
        \itemize{
           \item{Change default analysis method to DESeq2 for its more conservative normalization}
           \item{Designate DESeq method as obsolete (in favor of DESeq2); alter documentation and vignette accordingly.}
           \item{Change default FDR threshold to 0.05}
           \item{Add bNot paramater to dba.contrast to remove ! contrasts by default}
           \item{Remove bReturnPeaksets parameter from dba.plotVenn (does this by default)}
           \item{Change bCorPlot default to FALSE (no more automatic clustering heatmaps)}
        }
     \item{Internal changes}
       \itemize{
          \item{Bump version number to 2.0}
          \item{Update vignette}
          \item{Remove $allvectors and $vectors; replace with $merged (without score matrix) and $binding}
          \item{Upgrade peaksort to use inplace peakOrder}
          \item{Optimize peak merging memory usage}