@@ -13,7 +13,7 @@ dba.plotPCA(DBA, attributes, minval, maxval,
            th=DBA$config$th, bUsePval=DBA$config$bUsePval, 
            report, score, bLog=TRUE, mask, sites, label, cor=FALSE,
            b3D=FALSE, vColors, dotSize, labelSize, labelCols, 
-           fromComp=1, ...)
+           components=1:3, ...)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -124,8 +124,12 @@ Scaling factor for labels if present. Default is 0.8.
 Vector of colors to use for labels. Default is "black".
 }
 
-\item{fromComp}{
-Number of first component to plot.
+\item{components}{
+Number(s) of the components to plot.
+Can be a vector of two or three component numbers, or a single integer.
+If an integer, that component, 
+in addition to the succeeding one (\code{b3D=FALSE}) or two (\code{b3D=TRUE})
+will be plotted.
 }
 \item{\dots}{
 arguments passed to plot or plot3d (rgl).
